fix: align wishlist icon with info

--- a/styles/components/_credit.scss
+++ b/styles/components/_credit.scss
@@ -116,6 +116,7 @@
         bottom: 10px;
         left: 10px;
         z-index: 12;
+        height: 24px;
         transition: 0.3s;
     }
 
