--- a/styles/globals.css
+++ b/styles/globals.css
@@ -337,6 +337,7 @@ body {
   bottom: 10px;
   left: 10px;
   z-index: 12;
+  height: 24px;
   transition: 0.3s;
 }
 .credit_single .wishlist_icon:active {
